Addressed sonar findings